@@ -193,21 +193,27 @@ check "$TEST_RESULT" "d41d8cd98f00b204e9800998ecf8427e" .
 TEST_RESULT=$( printf "" | $rhash -p "%m" - )
 check "$TEST_RESULT" "d41d8cd98f00b204e9800998ecf8427e" .
 # test verification of empty file
-TEST_RESULT=$( $rhash -c "$EMPTY_FILE" | grep "^[^-]" )
+TEST_RESULT=$( $rhash -c "$EMPTY_FILE" | tr -d '\r' | grep "^[^-]" )
 check "$TEST_RESULT" "Nothing to verify"
 rm "$EMPTY_FILE"
 
 # Test the SFV format using test1K.data from the previous test
 new_test "test default format:        "
 MATCH_LOG="$RHASH_TMP/match_err.log"
-$rhash test1K.data | (
+$rhash test1K.data | tr -d '\r' | (
   read l; match_line "$l" "^; Generated by RHash"
   read l; match_line "$l" "^; Written by"
   read l; match_line "$l" "^;\$"
   read l; match_line "$l" "^; *1024  [0-9:\.]\{8\} [0-9-]\{10\} test1K.data\$"
   read l; match_line "$l" "^test1K.data B70B4C26\$"
 ) > "$MATCH_LOG"
-[ ! -s "$MATCH_LOG" ] && echo "Ok" || echo "Failed" && cat "$MATCH_LOG"
+if [ ! -s "$MATCH_LOG" ]; then
+  echo "Ok"
+else
+  echo "Failed"
+  fail_cnt=$((fail_cnt+1))
+  cat "$MATCH_LOG"
+fi
 rm -f "$MATCH_LOG"
 
 new_test "test %x, %b, %B modifiers:  "
@@ -257,6 +263,9 @@ fi
 
 new_test "test checking all hashes:   "
 TEST_RESULT=$( $rhash --simple -a test1K.data | $rhash -vc - 2>/dev/null | grep test1K.data )
+match "$TEST_RESULT" "^test1K.data *OK" .
+# verify a filepath started by star ('*') character
+TEST_RESULT=$( echo "b70b4c26 *test1K.data" | $rhash -Cc - 2>/dev/null | grep test1K.data )
 match "$TEST_RESULT" "^test1K.data *OK"
 
 new_test "test checking magnet link:  "
@@ -267,7 +276,7 @@ TEST_EXPECTED="^test1K.data *OK"
 match "$TEST_RESULT" "$TEST_EXPECTED"
 
 new_test "test bsd format checking:   "
-TEST_RESULT=$( $rhash --bsd -a test1K.data | $rhash -c --skip-ok - 2>&1 | grep -v '^--' | grep -v '^$' )
+TEST_RESULT=$( $rhash --bsd -a test1K.data | $rhash -c --skip-ok - 2>&1 | grep '^[^-].' )
 check "$TEST_RESULT" "Everything OK"
 
 new_test "test checking w/o filename: "
